--- a/bot/admin/kotlin-compiler/server/pom.xml
+++ b/bot/admin/kotlin-compiler/server/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-admin-kotlin-compiler</artifactId>
-        <version>21.9.2-SNAPSHOT</version>
+        <version>21.9.2-FAQ-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-admin-kotlin-compiler-server</artifactId>
