--- a/nlp/api/service/pom.xml
+++ b/nlp/api/service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-api</artifactId>
-        <version>21.9.3-SNAPSHOT</version>
+        <version>21.9.3</version>
     </parent>
 
     <artifactId>tock-nlp-api-service</artifactId>
