--- a/nlp/build-model-worker-on-demand/pom.xml
+++ b/nlp/build-model-worker-on-demand/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>21.9.3-SNAPSHOT</version>
+        <version>21.9.3</version>
     </parent>
 
     <artifactId>tock-nlp-build-model-worker-on-demand</artifactId>
