--- a/translator/noop/pom.xml
+++ b/translator/noop/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-translator</artifactId>
-        <version>21.9.4-SNAPSHOT</version>
+        <version>21.9.4</version>
     </parent>
 
     <artifactId>tock-translator-noop</artifactId>
