--- a/stt/core/pom.xml
+++ b/stt/core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-stt</artifactId>
-        <version>21.9.4</version>
+        <version>21.9.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-stt-core</artifactId>
