--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>ai.tock</groupId>
     <artifactId>tock-root</artifactId>
-    <version>21.9.5-SNAPSHOT</version>
+    <version>21.9.5</version>
     <packaging>pom</packaging>
     <name>Tock</name>
     <description>Tock, The Open Conversation Kit</description>
@@ -840,7 +840,7 @@
         <connection>scm:git:git@github.com:theopenconversationkit/tock.git</connection>
         <developerConnection>scm:git:git@github.com:theopenconversationkit/tock.git</developerConnection>
         <url>git@github.com:theopenconversationkit/tock.git</url>
-        <tag>tock-${project.version}</tag>
+        <tag>tock-21.9.5</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
