--- a/bot/connector-web/pom.xml
+++ b/bot/connector-web/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>mockk</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.18.1</version>
+        </dependency>
     </dependencies>
 
 </project>
