--- a/nlp/front/shared/pom.xml
+++ b/nlp/front/shared/pom.xml
@@ -34,6 +34,10 @@
             <groupId>ai.tock</groupId>
             <artifactId>tock-nlp-core-shared</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ai.tock</groupId>
+            <artifactId>tock-translator-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
