--- a/bot/connector-messenger/pom.xml
+++ b/bot/connector-messenger/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>21.9.6-SNAPSHOT</version>
+        <version>21.9.6</version>
     </parent>
 
     <artifactId>tock-bot-connector-messenger</artifactId>
