--- a/nlp/core/client/pom.xml
+++ b/nlp/core/client/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-core</artifactId>
-        <version>21.9.6-SNAPSHOT</version>
+        <version>21.9.6</version>
     </parent>
 
     <artifactId>tock-nlp-core-client</artifactId>
