--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>ai.tock</groupId>
     <artifactId>tock-nlp-admin</artifactId>
-    <version>21.9.6</version>
+    <version>21.9.7-SNAPSHOT</version>
   </parent>
 
   <artifactId>tock-nlp-admin-web</artifactId>
