feat(app): add configuration for unit tests

--- a/bot/admin/web/angular.json
+++ b/bot/admin/web/angular.json
@@ -111,7 +111,7 @@
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "karmaConfig": "karma.conf.js",
             "styles": [
               "src/styles.css"
             ],
