--- a/bot/admin/web/src/tsconfig.spec.json
+++ b/bot/admin/web/src/tsconfig.spec.json
@@ -1,10 +1,9 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/spec",
+    "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine",
-      "node"
+      "jasmine"
     ]
   },
   "files": [
@@ -16,3 +15,4 @@
     "**/*.d.ts"
   ]
 }
+
