--- a/bot/admin/web/src/tsconfig.app.json
+++ b/bot/admin/web/src/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/app",
+    "outDir": "./out-tsc/app",
     "types": []
   },
   "files": [
@@ -9,6 +9,6 @@
     "polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "**/*.d.ts"
   ]
 }
