--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -55,7 +55,6 @@
     "ngx-echarts": "^5.2.2",
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-moment": "^5.0.0",
-    "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
@@ -92,5 +91,8 @@
     "tslint": "~6.1.0",
     "tslint-language-service": "^0.9.9",
     "typescript": "4.1.5"
+  },
+  "volta": {
+    "node": "14.19.0"
   }
 }
