fix: revert some unwanted changes

--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -55,6 +55,7 @@
     "ngx-echarts": "^5.2.2",
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-moment": "^5.0.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "prettier": "2.6.2",
