--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -28,18 +28,19 @@
     "@nebular/theme": "7.0.0",
     "@ng-bootstrap/ng-bootstrap": "8.0.0",
     "ang-jsoneditor": "^1.10.5",
-    "angular-file-saver": "^1.1.3",
     "angular-google-charts": "1.1.4",
     "bootstrap": "^4.4.1",
     "ckeditor4": "^4.12.1",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.6.11",
-    "cytoscape": "^3.14.2",
+    "cose-base": "^2.1.0",
+    "cytoscape": "^3.21.1",
     "cytoscape-cola": "^2.3.1",
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-dagre": "^2.2.2",
     "echarts": "^5.0.0",
     "eva-icons": "^1.1.3",
+    "file-saver-es": "^2.0.5",
     "html2pdf.js": "^0.9.2",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
@@ -73,6 +74,7 @@
     "@angular/cli": "^11.2.1",
     "@angular/compiler-cli": "^11.2.2",
     "@angular/language-service": "^11.2.2",
+    "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
