test(scenario): added configuration for testing

--- a/bot/admin/web/angular.json
+++ b/bot/admin/web/angular.json
@@ -107,10 +107,11 @@
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "karmaConfig": "karma.conf.js",
             "styles": ["src/styles.css"],
             "scripts": [],
-            "assets": ["src/favicon.ico", "src/assets"]
+            "assets": ["src/favicon.ico", "src/assets"],
+            "preserveSymlinks": true
           }
         },
         "lint": {
