--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -30,7 +30,7 @@
     "ang-jsoneditor": "^1.10.5",
     "angular-google-charts": "1.1.4",
     "bootstrap": "^4.4.1",
-    "ckeditor4": "^4.12.1",
+    "ckeditor4": "^4.17.0",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.6.11",
     "cose-base": "^2.1.0",
@@ -38,16 +38,16 @@
     "cytoscape-cola": "^2.3.1",
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-dagre": "^2.2.2",
-    "echarts": "^5.0.0",
+    "echarts": "^5.3.3",
     "eva-icons": "^1.1.3",
     "file-saver-es": "^2.0.5",
-    "html2pdf.js": "^0.9.2",
+    "html2pdf.js": "^0.10.1",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "jsoneditor": "^9.5.6",
     "leaflet": "1.2.0",
     "material-design-icons-iconfont": "^5.0.1",
-    "moment": "2.24.0",
+    "moment": "^2.29.3",
     "nebular-icons": "1.1.0",
     "ng2-charts": "^2.4.2",
     "ng2-ckeditor": "^1.2.7",
@@ -81,7 +81,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.1",
+    "karma": "^6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
