--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -28,6 +28,7 @@
     "@nebular/eva-icons": "7.0.0",
     "@nebular/theme": "7.0.0",
     "@ng-bootstrap/ng-bootstrap": "8.0.0",
+    "@svgdotjs/svg.js": "^3.1.2",
     "ang-jsoneditor": "^1.10.5",
     "angular-file-saver": "^1.1.3",
     "angular-google-charts": "1.1.4",
