--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -35,6 +35,7 @@
         <module>connector-rest</module>
         <module>connector-rest-client</module>
         <module>connector-messenger</module>
+        <module>connector-alcmeon</module>
         <module>connector-ga</module>
         <module>connector-slack</module>
         <module>connector-alexa</module>
