--- a/bot/api/service/pom.xml
+++ b/bot/api/service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-api</artifactId>
-        <version>22.3.2-SNAPSHOT</version>
+        <version>22.3.2</version>
     </parent>
 
     <artifactId>tock-bot-api-service</artifactId>
