--- a/bot/connector-iadvize/src/main/resources/iadvize.properties
+++ b/bot/connector-iadvize/src/main/resources/iadvize.properties
@@ -17,3 +17,4 @@
 tock_iadvize_unsupported_message_request=Désolé, je ne sais pas répondre à cette demande
 tock_iadvize_editor_url=URL de l'éditeur
 tock_iadvize_first_message=Premier message affiché par le bot avant le début de conversation
+tock_iadvize_distribution_rule=Règle de transfert vers un humain
