--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "mavenbuild": "ng build --prod --aot"
