resolves #1391 rouble not found net.minidev:json-smart:jar:2.3-SNAPSHOT resolves #1400 use JDK11 as minimal jvm version and update old jvm dependencies

--- a/bot/chatbase/pom.xml
+++ b/bot/chatbase/pom.xml
@@ -49,7 +49,7 @@
         </dependency>
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>mockk-jvm</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
