--- a/bot/connector-alcmeon/pom.xml
+++ b/bot/connector-alcmeon/pom.xml
@@ -80,7 +80,7 @@
 
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>mockk-jvm</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
