--- a/bot/connector-alexa/pom.xml
+++ b/bot/connector-alexa/pom.xml
@@ -105,7 +105,7 @@
         </dependency>
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>mockk-jvm</artifactId>
             <scope>test</scope>
         </dependency>
         <!-- workaround for mockk issue see https://github.com/mockk/mockk/issues/199 -->
