--- a/bot/connector-ga/pom.xml
+++ b/bot/connector-ga/pom.xml
@@ -28,7 +28,6 @@
     <name>Tock Bot Google Assistant Connector</name>
     <description>Bot Connector for Google Assistant</description>
 
-
     <dependencies>
         <dependency>
             <groupId>ai.tock</groupId>
@@ -86,7 +85,7 @@
         </dependency>
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>mockk-jvm</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
