--- a/bot/connector-google-chat/pom.xml
+++ b/bot/connector-google-chat/pom.xml
@@ -95,7 +95,7 @@
 
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>mockk-jvm</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
