--- a/bot/orchestration/pom.xml
+++ b/bot/orchestration/pom.xml
@@ -53,7 +53,8 @@
         </dependency>
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>mockk-jvm</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
