--- a/bot/test-base/pom.xml
+++ b/bot/test-base/pom.xml
@@ -83,7 +83,8 @@
         </dependency>
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>mockk-jvm</artifactId>
+            <version>${mockk}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
