--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -68,7 +68,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>install -d --loglevel warn</arguments>
+              <arguments>install -d --loglevel warn --force</arguments>
             </configuration>
           </execution>
           <execution>
