--- a/bot/test/pom.xml
+++ b/bot/test/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>22.9.0</version>
+        <version>22.9.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>bot-test</artifactId>
