resolves #1401 remove emoji4j dependency

--- a/bot/connector-ga/pom.xml
+++ b/bot/connector-ga/pom.xml
@@ -38,8 +38,8 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.kcthota</groupId>
-            <artifactId>emoji4j</artifactId>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.oauth-client</groupId>
