--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <jasypt>1.9.3</jasypt>
         <commons-csv>1.9.0</commons-csv>
         <commons-text>1.10.0</commons-text>
-        <emoji>6.0</emoji>
+        <emoji>5.1.1</emoji>
         <commons-codec>1.15</commons-codec>
         <commons-lang>3.12.0</commons-lang>
         <commonmark>0.19.0</commonmark>
@@ -532,19 +532,9 @@
             </dependency>
 
             <dependency>
-                <groupId>com.kcthota</groupId>
-                <artifactId>emoji4j</artifactId>
+                <groupId>com.vdurmont</groupId>
+                <artifactId>emoji-java</artifactId>
                 <version>${emoji}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.fasterxml.jackson.core</groupId>
-                        <artifactId>jackson-core</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>com.fasterxml.jackson.core</groupId>
-                        <artifactId>jackson-databind</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 
             <dependency>
