--- a/bot/dialog-manager/pom.xml
+++ b/bot/dialog-manager/pom.xml
@@ -29,8 +29,9 @@
     <description>Core framework for managing TickStory</description>
 
     <properties>
-        <serialization.version>1.4.0-RC</serialization.version>
+        <serialization.version>1.4.0</serialization.version>
         <jep.version>4.0.3</jep.version>
+        <antrun.version>3.1.0</antrun.version>
     </properties>
 
 
@@ -61,6 +62,29 @@
                         <version>${kotlin}</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>${antrun.version}</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <target>
+                                <mkdir dir="/tmp/python"/>
+                                <mkdir dir="/tmp/python/log"/>
+                                <copy todir="/tmp/python">
+                                    <fileset dir="${basedir}/src/main/resources/python" includes="*/*" />
+                                </copy>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
