--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -77,7 +77,7 @@
     "@angular/compiler-cli": "^11.2.2",
     "@angular/language-service": "^11.2.2",
     "@types/file-saver-es": "^2.0.1",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "^3.7.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
