--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -48,6 +48,7 @@
     "ionicons": "2.0.1",
     "jsoneditor": "^9.5.6",
     "leaflet": "1.2.0",
+    "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.29.3",
     "nebular-icons": "1.1.0",
@@ -79,6 +80,7 @@
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "^3.7.0",
     "@types/jasminewd2": "^2.0.8",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
