fix bot admin build

--- a/nlp/admin/web/pom.xml
+++ b/nlp/admin/web/pom.xml
@@ -78,7 +78,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>run-script mavenbuild --loglevel warn</arguments>
+              <arguments>run-script mavenbuild --loglevel warn --force</arguments>
             </configuration>
           </execution>
         </executions>
