--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -40,6 +40,7 @@
     "cytoscape-cola": "^2.3.1",
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-dagre": "^2.2.2",
+    "dagre": "^0.8.5",
     "echarts": "^5.3.3",
     "eva-icons": "^1.1.3",
     "file-saver-es": "^2.0.5",
@@ -77,6 +78,7 @@
     "@angular/cli": "^11.2.1",
     "@angular/compiler-cli": "^11.2.2",
     "@angular/language-service": "^11.2.2",
+    "@types/dagre": "^0.7.48",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "^4.3.0",
     "@types/jasminewd2": "^2.0.8",
