--- a/tock-docker/docker-compose.yml
+++ b/tock-docker/docker-compose.yml
@@ -3,25 +3,25 @@ version: '3'
 services:
 
   mongo:
-    image: mongo:3.6.5
+    image: "${PLATFORM}mongo:${MONGO}"
     volumes:
       - tockmongo:/data/db
     ports:
       - "27017:27017"
-    command: --smallfiles --bind_ip_all --port 27017 --replSet "tock"
+    command: --bind_ip_all --port 27017 --replSet "tock"
 
   mongo2:
-    image: mongo:3.6.5
+    image: "${PLATFORM}mongo:${MONGO}"
     depends_on:
       - mongo
     volumes:
       - tockmongo2:/data/db
     ports:
       - "27018:27018"
-    command: --smallfiles --bind_ip_all --port 27018 --replSet "tock"
+    command: --bind_ip_all --port 27018 --replSet "tock"
 
   mongo3:
-    image: mongo:3.6.5
+    image: "${PLATFORM}mongo:${MONGO}"
     depends_on:
       - mongo
       - mongo2
@@ -29,11 +29,11 @@ services:
       - tockmongo3:/data/db
     ports:
       - "27019:27019"
-    command: --smallfiles --bind_ip_all --port 27019 --replSet "tock"
+    command: --bind_ip_all --port 27019 --replSet "tock"
 
   mongo-setup:
     container_name: "mongo-setup"
-    image: mongo:3.6.5
+    image: "${PLATFORM}mongo:${MONGO}"
     depends_on:
       - "mongo"
       - "mongo2"
@@ -52,7 +52,7 @@ services:
     entrypoint: [ "/scripts/setup.sh" ]
 
   build_worker:
-    image: tock/build_worker:$TAG
+    image: "tock/build_worker:${TAG}"
     depends_on:
       - mongo
       - mongo2
@@ -63,14 +63,14 @@ services:
       - JAVA_ARGS=-Xmx1g -XX:MaxMetaspaceSize=256m
 
   duckling:
-    image: tock/duckling:$TAG
+    image: "tock/duckling:${TAG}"
     environment:
       - tock_env=prod
     expose:
       - "8080"
 
   kotlin_compiler:
-    image: tock/kotlin_compiler:$TAG
+    image: "tock/kotlin_compiler:${TAG}"
     environment:
       - tock_env=prod
       - tock_kotlin_compiler_classpath=/maven
@@ -78,7 +78,7 @@ services:
       - "8080"
 
   admin_web:
-    image: tock/bot_admin:$TAG
+    image: "tock/bot_admin:${TAG}"
     depends_on:
       - mongo
       - mongo2
@@ -99,7 +99,7 @@ services:
       - "80:8080"
 
   nlp_api:
-    image: tock/nlp_api:$TAG
+    image: "tock/nlp_api:${TAG}"
     depends_on:
       - mongo
       - mongo2
