--- a/tock-docker/docker-compose-bot-python.yml
+++ b/tock-docker/docker-compose-bot-python.yml
@@ -3,25 +3,25 @@ version: '3'
 services:
 
   mongo:
-    image: mongo:3.6.5
+    image: "${PLATFORM}mongo:${MONGO}"
     volumes:
       - tockmongo:/data/db
     ports:
       - "27017:27017"
-    command: --smallfiles --bind_ip_all --port 27017 --replSet "tock"
+    command: --bind_ip_all --port 27017 --replSet "tock"
 
   mongo2:
-    image: mongo:3.6.5
+    image: "${PLATFORM}mongo:${MONGO}"
     depends_on:
       - mongo
     volumes:
       - tockmongo2:/data/db
     ports:
       - "27018:27018"
-    command: --smallfiles --bind_ip_all --port 27018 --replSet "tock"
+    command: --bind_ip_all --port 27018 --replSet "tock"
 
   mongo3:
-    image: mongo:3.6.5
+    image: "${PLATFORM}mongo:${MONGO}"
     depends_on:
       - mongo
       - mongo2
@@ -29,11 +29,11 @@ services:
       - tockmongo3:/data/db
     ports:
       - "27019:27019"
-    command: --smallfiles --bind_ip_all --port 27019 --replSet "tock"
+    command: --bind_ip_all --port 27019 --replSet "tock"
 
   mongo-setup:
     container_name: "mongo-setup"
-    image: mongo:3.6.5
+    image: "${PLATFORM}mongo:${MONGO}"
     depends_on:
       - "mongo"
       - "mongo2"
@@ -52,7 +52,7 @@ services:
     entrypoint: [ "/scripts/setup.sh" ]
 
   build_worker:
-    image: tock/build_worker:$TAG
+    image: "tock/build_worker:${TAG}"
     depends_on:
       - mongo
       - mongo2
@@ -66,7 +66,7 @@ services:
   #      - tock_database_log_level=warn
 
   duckling:
-    image: tock/duckling:$TAG
+    image: "tock/duckling:${TAG}"
     environment:
       - tock_env=prod
     #      - tock_default_log_level=warn
@@ -76,7 +76,7 @@ services:
       - "8080"
 
   kotlin_compiler:
-    image: tock/kotlin_compiler:$TAG
+    image: "tock/kotlin_compiler:${TAG}"
     environment:
       - tock_env=prod
       - tock_kotlin_compiler_classpath=/maven
@@ -87,7 +87,7 @@ services:
       - "8080"
 
   admin_web:
-    image: tock/bot_admin:$TAG
+    image: "tock/bot_admin:${TAG}"
     depends_on:
       - mongo
       - mongo2
@@ -108,13 +108,13 @@ services:
     #      - tock_default_log_level=warn
     #      - tock_service_log_level=info
     #      - tock_database_log_level=warn
+    volumes:
+      - "tock-tmp-python-log:/tmp/python/log"
     ports:
       - "80:8080"
-    volumes:
-      - "tock-tmp:/tmp/python/log"
 
   nlp_api:
-    image: tock/nlp_api:$TAG
+    image: "tock/nlp_api:${TAG}"
     depends_on:
       - mongo
       - mongo2
@@ -135,7 +135,7 @@ services:
       - "8888:8080"
 
   bot_api:
-    image: tock/bot_api:$TAG
+    image: "tock/bot_api:${TAG}"
     depends_on:
       - mongo
       - mongo2
@@ -150,13 +150,13 @@ services:
     #      - tock_default_log_level=warn
     #      - tock_service_log_level=info
     #      - tock_database_log_level=warn
+    volumes:
+      - "tock-tmp-python-log:/tmp/python/log"
     ports:
       - "8080:8080"
-    volumes:
-      - "tock-tmp:/tmp/python/log"
 
 volumes:
   tockmongo:
   tockmongo2:
   tockmongo3:
-  tock-tmp:
+  tock-tmp-python-log:
