♻️(app): add an alias for test file imports

--- a/bot/admin/web/src/tsconfig.spec.json
+++ b/bot/admin/web/src/tsconfig.spec.json
@@ -2,17 +2,13 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine"
-    ]
+    "types": ["jasmine"],
+    "baseUrl": ".",
+    "paths": {
+      "@tock/testing": ["testing"],
+      "@tock/testing/*": ["testing/*"]
+    }
   },
-  "files": [
-    "test.ts",
-    "polyfills.ts"
-  ],
-  "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
-  ]
+  "files": ["test.ts", "polyfills.ts"],
+  "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
-
