⬆️(app): upgrade angular 12 to 13

--- a/bot/admin/web/.gitignore
+++ b/bot/admin/web/.gitignore
@@ -45,9 +45,10 @@
 !.vscode/extensions.json
 
 # misc
+/.angular/cache
 /.sass-cache
 /connect.lock
-/coverage
+/coverage/*
 /libpeerconnection.log
 npm-debug.log
 testem.log
