--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -8,26 +8,26 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "mavenbuild": "ng build --prod --aot"
+    "mavenbuild": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.17",
-    "@angular/cdk": "12.2.13",
-    "@angular/common": "^12.2.17",
-    "@angular/compiler": "^12.2.17",
-    "@angular/core": "^12.2.17",
-    "@angular/forms": "^12.2.17",
-    "@angular/localize": "^12.2.17",
-    "@angular/material": "12.2.13",
-    "@angular/platform-browser": "^12.2.17",
-    "@angular/platform-browser-dynamic": "^12.2.17",
-    "@angular/router": "^12.2.17",
-    "@nebular/eva-icons": "8.0.0",
-    "@nebular/theme": "8.0.0",
-    "@ng-bootstrap/ng-bootstrap": "10.0.0",
+    "@angular/animations": "^13.3.12",
+    "@angular/cdk": "13.3.9",
+    "@angular/common": "^13.3.12",
+    "@angular/compiler": "^13.3.12",
+    "@angular/core": "^13.3.12",
+    "@angular/forms": "^13.3.12",
+    "@angular/localize": "^13.3.12",
+    "@angular/material": "13.3.9",
+    "@angular/platform-browser": "^13.3.12",
+    "@angular/platform-browser-dynamic": "^13.3.12",
+    "@angular/router": "^13.3.12",
+    "@nebular/eva-icons": "9.0.3",
+    "@nebular/theme": "9.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "ang-jsoneditor": "^1.10.5",
-    "angular-google-charts": "^2.2.2",
+    "angular-google-charts": "2.2.2",
     "bootstrap": "^4.4.1",
     "cose-base": "^2.1.0",
     "cytoscape": "^3.23.0",
@@ -45,14 +45,14 @@
     "ngx-moment": "^5.0.0",
     "normalize.css": "6.0.0",
     "rxjs": "6.6.3",
-    "tslib": "^2.0.0",
+    "tslib": "^2.4.1",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.18",
-    "@angular/cli": "^12.2.18",
-    "@angular/compiler-cli": "^12.2.17",
-    "@angular/language-service": "^12.2.17",
+    "@angular-devkit/build-angular": "~13.3.10",
+    "@angular/cli": "^13.3.10",
+    "@angular/compiler-cli": "^13.3.12",
+    "@angular/language-service": "^13.3.12",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
@@ -68,6 +68,6 @@
     "prettier": "2.6.2",
     "ts-node": "3.2.2",
     "tslint": "~6.1.0",
-    "typescript": "4.3.5"
+    "typescript": "4.6.4"
   }
 }
