⬆️(app): upgrade angular 13 to 14

--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -12,22 +12,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.12",
-    "@angular/cdk": "13.3.9",
-    "@angular/common": "^13.3.12",
-    "@angular/compiler": "^13.3.12",
-    "@angular/core": "^13.3.12",
-    "@angular/forms": "^13.3.12",
-    "@angular/localize": "^13.3.12",
-    "@angular/material": "13.3.9",
-    "@angular/platform-browser": "^13.3.12",
-    "@angular/platform-browser-dynamic": "^13.3.12",
-    "@angular/router": "^13.3.12",
-    "@nebular/eva-icons": "9.0.3",
-    "@nebular/theme": "9.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@angular/animations": "^14.2.12",
+    "@angular/cdk": "14.2.7",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/localize": "^14.2.12",
+    "@angular/material": "14.2.7",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
+    "@nebular/eva-icons": "10.0.0",
+    "@nebular/theme": "10.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "ang-jsoneditor": "^1.10.5",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.2.0",
     "echarts": "^5.3.3",
     "file-saver-es": "^2.0.5",
     "jsoneditor": "^9.5.6",
@@ -38,15 +38,15 @@
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-moment": "^5.0.0",
     "normalize.css": "6.0.0",
-    "rxjs": "6.6.3",
+    "rxjs": "^7.4.0",
     "tslib": "^2.4.1",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.10",
-    "@angular/cli": "^13.3.10",
-    "@angular/compiler-cli": "^13.3.12",
-    "@angular/language-service": "^13.3.12",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.12",
+    "@angular/language-service": "^14.2.12",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
