--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -12,22 +12,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.12",
-    "@angular/cdk": "13.3.9",
-    "@angular/common": "^13.3.12",
-    "@angular/compiler": "^13.3.12",
-    "@angular/core": "^13.3.12",
-    "@angular/forms": "^13.3.12",
-    "@angular/localize": "^13.3.12",
-    "@angular/material": "13.3.9",
-    "@angular/platform-browser": "^13.3.12",
-    "@angular/platform-browser-dynamic": "^13.3.12",
-    "@angular/router": "^13.3.12",
-    "@nebular/eva-icons": "9.0.3",
-    "@nebular/theme": "9.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@angular/animations": "^14.2.12",
+    "@angular/cdk": "14.2.7",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/localize": "^14.2.12",
+    "@angular/material": "14.2.7",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
+    "@nebular/eva-icons": "10.0.0",
+    "@nebular/theme": "10.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
     "ang-jsoneditor": "^1.10.5",
-    "angular-google-charts": "2.2.2",
+    "angular-google-charts": "2.2.3",
     "bootstrap": "^4.4.1",
     "cose-base": "^2.1.0",
     "cytoscape": "^3.23.0",
@@ -38,21 +38,21 @@
     "file-saver-es": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "jsoneditor": "^9.5.6",
-    "material-design-icons-iconfont": "^5.0.1",
+    "material-design-icons-iconfont": "^6.7.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-echarts": "^7.0.0",
     "ngx-infinite-scroll": "^8.0.2",
-    "ngx-moment": "^5.0.0",
+    "ngx-moment": "^6.0.2",
     "normalize.css": "6.0.0",
-    "rxjs": "6.6.3",
+    "rxjs": "^7.4.0",
     "tslib": "^2.4.1",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.10",
-    "@angular/cli": "^13.3.10",
-    "@angular/compiler-cli": "^13.3.12",
-    "@angular/language-service": "^13.3.12",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.12",
+    "@angular/language-service": "^14.2.12",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
@@ -68,6 +68,6 @@
     "prettier": "2.6.2",
     "ts-node": "3.2.2",
     "tslint": "~6.1.0",
-    "typescript": "4.6.4"
+    "typescript": "4.8"
   }
 }
