--- a/samples/tock-sample-cas-auth-provider/conf/dev/tock-bot-admin-server.env
+++ b/samples/tock-sample-cas-auth-provider/conf/dev/tock-bot-admin-server.env
@@ -1,5 +1,7 @@
-tock_cas_auth_proxy_host=127.0.0.1
-tock_cas_auth_proxy_port=3128
+#use another proxy host if needed
+#tock_cas_auth_proxy_host=127.0.0.1
+#tock_cas_auth_proxy_port=3128
+#can be changed to dev or prod
 tock_env=integ
 tock_https_env=false
 botadminverticle_content_path=bot/admin/web/target/frontend/dist
