:doc: documentation custom-metrics
Co-authored-by: djowalker <jordan.monfort@partnre.com>

--- a/docs/_data/tocs/fr.yml
+++ b/docs/_data/tocs/fr.yml
@@ -32,6 +32,8 @@ content:
             url: 'fr/user/studio/test'
           - title: 'Le menu Analytics'
             url: 'fr/user/studio/analytics'
+          - title: 'Le menu Custom Metrics'
+            url: 'fr/user/studio/custom-metrics'
           - title: 'Le menu Model Quality'
             url: 'fr/user/studio/nlu-qa'
           - title: 'Le menu Settings'
@@ -43,12 +45,12 @@ content:
       - title: 'Guides'
         url: 'fr/user/guides'
         children:
-        - title: 'Construire un modèle conversationnel'
-          url: 'fr/user/guides/build-model'
-        - title: 'Bot multicanal'
-          url: 'fr/user/guides/canaux'
-        - title: 'Bot multilingue'
-          url: 'fr/user/guides/i18n'
+          - title: 'Construire un modèle conversationnel'
+            url: 'fr/user/guides/build-model'
+          - title: 'Bot multicanal'
+            url: 'fr/user/guides/canaux'
+          - title: 'Bot multilingue'
+            url: 'fr/user/guides/i18n'
   - title: 'Développer avec Tock'
     children:
       - title: 'Modes disponibles'
